@@ -1,5 +1,13 @@
 2008-05-01  Anders Carlsson  <andersca@apple.com>
 
+        Fix 64-bit build.
+        
+        * Plugins/WebNetscapePluginEventHandlerCocoa.h:
+        * Plugins/WebNetscapePluginEventHandlerCocoa.mm:
+        * WebCoreSupport/WebFrameLoaderClient.mm:
+
+2008-05-01  Anders Carlsson  <andersca@apple.com>
+
         Fix build.
         
         * Plugins/npfunctions.h:
